src/objects/Association_CPA_Order_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Number_of_Baskets__c</fullName>
        <formula>CPA_Order_Allocation__r.Number_of_Baskets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Baskets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Number_of_Kilos__c</fullName>
        <formula>CPA_Order_Allocation__r.Number_of_Kilos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Kilos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Number_of_Units_of_Presentation__c</fullName>
        <formula>CPA_Order_Allocation__r.Number_of_Units_of_Presentation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Units of Presentation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Unit_of_Presentation__c</fullName>
        <formula>CPA_Order_Allocation__r.Unit_of_Presentation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Unit of Presentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Order_Allocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CPA Order Allocation</label>
        <referenceTo>CPA_Order_Allocation__c</referenceTo>
        <relationshipLabel>Association CPA Order Deliveries</relationshipLabel>
        <relationshipName>Association_CPA_Order_Deliveries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Receipt_Number__c</fullName>
        <label>Delivery Receipt Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Delivery_On_Time__c</fullName>
        <label>Is Delivery On Time</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_of_Presentation__c</fullName>
        <label>Number of Units of Presentation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Code__c</fullName>
        <formula>CPA_Order_Allocation__r.Order_Code__c</formula>
        <label>Order Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentacion_Asignada__c</fullName>
        <label>Presentación Asignada</label>
        <picklist>
            <picklistValues>
                <fullName>5 al día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandeja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolsa transparente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ekono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por paquete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo a mil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todo a 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitafilado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>CPA_Order_Allocation__r.CPA_Order__r.Client_Product_Association__r.Product__c</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Presentation__c</fullName>
        <label>Unit of Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satchels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Association CPA Order Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CPA_Order_Allocation__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Delivery_Receipt_Number__c</columns>
        <columns>Number_of_Baskets__c</columns>
        <columns>Number_of_Kilos__c</columns>
        <columns>Number_of_Units_of_Presentation__c</columns>
        <columns>Product__c</columns>
        <columns>Unit_of_Presentation__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACODN-{00000}</displayFormat>
        <label>Association CPA Order Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Association CPA Order Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>